// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`icon > renders icon inline type with title text 1`] = `
<DocumentFragment>
  <svg
    aria-labelledby="GENERATED-0"
    class="icon icon--mic"
    role="img"
  >
    <use
      href="#icon-mic"
    />
    <title
      id="GENERATED-0"
    >
      inline icon
    </title>
  </svg>
</DocumentFragment>
`;

exports[`icon > renders icon inline type without title text 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="icon icon--mic"
  >
    <use
      href="#icon-mic"
    />
  </svg>
</DocumentFragment>
`;

exports[`icon > renders icon no-skin-classes 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="custom-class icon icon--mic"
  >
    <use
      href="#icon-mic"
    />
  </svg>
</DocumentFragment>
`;
